<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_one"
            android:icon="@drawable/doorkey"
            android:title="@string/item_1" />
        <item android:id="@+id/nav_item_two"
            android:icon="@drawable/doorkey"
            android:title="@string/item_2" />
        <item android:id="@+id/nav_item_three"
            android:icon="@drawable/doorkey"
            android:title="@string/item_3" />
    </group>

    <group android:id="@+id/group_menu">
        <item android:id="@+id/nav_item_four"
            android:title="@string/item_4" />
        <item android:id="@+id/nav_item_five"
            android:title="@string/item_5" />
    </group>

    <item android:title="@string/title_1">
        <menu>
            <item android:id="@+id/nav_item_six"
                android:icon="@drawable/doorkey"
                android:title="@string/item_6" />
            <item android:id="@+id/nav_item_seven"
                android:icon="@drawable/doorkey"
                android:title="@string/item_7" />
        </menu>
    </item>
</menu>