<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/transitive_pink_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/ebeveyn_giris_yazisi"
        android:textSize="20sp"
        android:textColor="#9CFFFFFF"/>
   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/img1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </LinearLayout> -->
    <ImageView
        android:contentDescription="@string/giris_yap_image"
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/family"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="18sp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/plate_textview"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColorHint="#9CFFFFFF"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:autofillHints="username"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="40dp"
        android:textSize="18sp"
        android:textColorHint="#9CFFFFFF"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:autofillHints="@string/password"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/plate_textview"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />




</androidx.constraintlayout.widget.ConstraintLayout>